# vanessa

./: .gitignore  .gitignore.bak  Cargo.toml  clap.yaml
src/: filepaths.rs  linux_vanessa.rs  main.rs  windows_vanessa.rs
